--- a/komunat/src/app/komunat/komunat.page.scss
+++ b/komunat/src/app/komunat/komunat.page.scss
@@ -1,105 +1,50 @@
-.flip-container {
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    -o-perspective: 1000;
-    perspective: 1000;
+.spinner {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  margin-left: -30px;
+}
+
+.cube1, .cube2 {
+  background-color: #333;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+  animation: sk-cubemove 1.8s infinite ease-in-out;
+}
+
+.cube2 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+@-webkit-keyframes sk-cubemove {
+  25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
+  50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
+  75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
+  100% { -webkit-transform: rotate(-360deg) }
+}
+
+@keyframes sk-cubemove {
+  25% { 
+    transform: translateX(42px) rotate(-90deg) scale(0.5);
+    -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+  } 50% { 
+    transform: translateX(42px) translateY(42px) rotate(-179deg);
+    -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+  } 50.1% { 
+    transform: translateX(42px) translateY(42px) rotate(-180deg);
+    -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+  } 75% { 
+    transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+    -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+  } 100% { 
+    transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
   }
-  
-  .flip-container.flip .flipper {
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-  }
-  
-  .flip-container,
-  .front,
-  .back {
-    margin-bottom: 40px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  .flip-container .top,
-  .front .top,
-  .back .top {
-    padding: 30px 20px;
-  }
-  
-  .flip-container .top,
-  .flip-container .icon-holder,
-  .front .top,
-  .front .icon-holder,
-  .back .top,
-  .back .icon-holder {
-    background-color: #777777;
-    color: #fff;
-  }
-  
-  .flip-container .icon-holder,
-  .front .icon-holder,
-  .back .icon-holder {
-    margin: -25px auto 0;
-    border-radius: 50%;
-    border: 6px solid #fff;
-    width: 50px;
-    height: 50px;
-    padding: 7px 10px 10px;
-    font-size: x-large;
-  }
-  
-  .front.success .top,
-  .front.success .icon-holder,
-  .back.success .top,
-  .back.success .icon-holder {
-    background-color: #23AE89;
-    color: #fff;
-  }
-  /* flip speed goes here */
-  
-  .flipper {
-    transition: 0.6s;
-    -webkit-transition: 0.6s;
-    -moz-transition: 0.6s;
-    -o-transition: 0.6s;
-    -ms-transition: 0.6s;
-    transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    position: relative;
-  }
-  /* hide back of pane during swap */
-  
-  .front,
-  .back {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  /* front pane, placed above back */
-  
-  .front {
-    z-index: 2;
-    /* for firefox 31 */
-    
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-  }
-  /* back, initially hidden pane */
-  
-  .back {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-  }
+}
