--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -1,24 +1,34 @@
-<ion-header>
-    <ion-toolbar>
-        
-        <ion-title text-center>
-          Komunat
-        </ion-title>
-      </ion-toolbar>
-</ion-header>
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-card-header>
-        <ion-card-title>Was wir tun</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
+   <img class="logo" src="../../assets/img/logo.png"/>
 
-    <ion-card class="welcome-card">
-        <ion-card-content>
-          <ion-button (click) ="goToKomunat($event)" color="dark" expand="block" shape="round">Zum Komunat</ion-button>
-        </ion-card-content>
-      </ion-card>
+  <ion-slides zoom="false">
+    <ion-slide>
+      <div class="swiper">
+        <img class="instruction" src="../../assets/img/placeholder.png">
+        <p class="landing_text">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+          </p>
+          <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+      </div>
+    </ion-slide>
+    <ion-slide>
+        <div class="swiper">
+            <img class="instruction" src="../../assets/img/placeholder.png">
+            <p class="landing_text">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+              </p>
+              <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+          </div>
+    </ion-slide>
+    <ion-slide>
+        <div class="swiper">
+            <img class="instruction" src="../../assets/img/placeholder.png">
+            <p class="landing_text">
+                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+              </p>
+              <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+          </div>
+    </ion-slide>
+  </ion-slides>
+     
 </ion-content>
