--- a/komunat/src/app/home/home.page.scss
+++ b/komunat/src/app/home/home.page.scss
@@ -2,3 +2,37 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+.logo {
+  width: 80vw;
+  margin: auto;
+  margin-top: 1em;
+  display: block;
+}
+
+.title {
+  width: 80vw;
+  margin: auto;
+  margin-top: 2em;
+  display: block;
+  text-align: center;
+  color: #59BCED;
+}
+
+.landing_text {
+  margin-top: 1em;
+  margin: 30px;
+  display: block;
+  color: #4C4D4F;
+}
+
+.goBtn
+{
+  height: 8vh;
+  margin: 25px;
+}
+
+.instruction {
+  height:auto;
+  width:100vw;
+}
