--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -12,6 +12,7 @@
     </div>
 
 <ion-content padding>
+
     <ion-list>
       <div *ngFor="let match of matches; let i = index" class="animated fadeInRight delay-{{ i }}s match_{{ i }} candidateCard">
           <div class="imageWrapper">
@@ -64,65 +65,15 @@
             </div>
 
           </div>
-
-          <!--
-          <ion-item class="text-wrap">  
-            <ion-label>{{match.candidate.name}}</ion-label>
-          </ion-item>
-          <ion-item>
-              <ion-grid>
-                  <ion-row>
-                      <ion-col size=4>
-                          <p><b>Geburtsdatum:</b></p>
-                      </ion-col>
-                      <ion-col size=8>
-                          <p>{{match.candidate.birthdate}}</p>
-                      </ion-col>
-                  </ion-row>
-                  <ion-row>
-                      <ion-col size=4>
-                          <p><b>Liste:</b></p>
-                      </ion-col>
-                      <ion-col size=8>
-                          <p>{{match.candidate.list}}</p>
-                      </ion-col>
-                  </ion-row>
-                  <ion-row>
-                      <ion-col size=4>
-                          <p><b>Listenplatz:</b></p>
-                      </ion-col>
-                      <ion-col size=8>
-                          <p>{{match.candidate.list_number}}</p>
-                      </ion-col>
-                  </ion-row>
-                  <ion-row>
-                      <ion-col size=4>
-                          <p><b>Stadtbezirk:</b></p>
-                      </ion-col>
-                      <ion-col size=8>
-                          <p>{{match.candidate.district}}</p>
-                      </ion-col>
-                  </ion-row>
-                  <ion-row>
-                      <ion-col text-center size=12>
-
-                              <div *ngIf="match.isChecked == true; then thenBlock else elseBlock"></div>
-                              <ng-template #thenBlock>
-                                  <ion-button size="default"(click) ="toggleTeam(match,i)" expand="block" color="dark" shape="rounded" fill="solid">
-                                      Von meinem Team entfernen
-                                  </ion-button>
-                                  </ng-template>
-                              <ng-template #elseBlock>
-                                  <ion-button size="default"(click) ="toggleTeam(match,i)" expand="block" color="dark" shape="rounded" fill="outline">
-                                      Zu meinem Team hinzufügen
-                                  </ion-button>
-                                  </ng-template>
-                            </ion-col>
-                    </ion-row>
-                  </ion-grid>
-            </ion-item>
-            -->
     </div>
       </ion-list>
-      
+      <web-social-share show="true">
+            <ion-icon slot="facebook" name="logo-facebook"></ion-icon>
+            <ion-icon slot="twitter" name="logo-twitter"></ion-icon>
+            <ion-icon slot="linkedin" name="logo-linkedin"></ion-icon>
+            <ion-icon slot="email" name="mail"></ion-icon>
+            <ion-icon slot="whatsapp" name="logo-whatsapp"></ion-icon>
+          </web-social-share>
+        
+
 </ion-content>
