--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -1,34 +1,24 @@
-<ion-content>
-   <img class="logo" src="../../assets/img/logo.png"/>
+<div class="container">
+  <img class="logo" src="../../assets/img/logo.png"/>
 
-  <ion-slides zoom="false">
-    <ion-slide>
-      <div class="swiper">
-        <img class="instruction" src="../../assets/img/placeholder.png">
-        <p class="landing_text">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-          </p>
-          <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
-      </div>
-    </ion-slide>
-    <ion-slide>
-        <div class="swiper">
-            <img class="instruction" src="../../assets/img/placeholder.png">
-            <p class="landing_text">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-              </p>
-              <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
-          </div>
-    </ion-slide>
-    <ion-slide>
-        <div class="swiper">
-            <img class="instruction" src="../../assets/img/placeholder.png">
-            <p class="landing_text">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-              </p>
-              <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
-          </div>
-    </ion-slide>
-  </ion-slides>
-     
-</ion-content>
+ <ion-slides zoom="false">
+   <ion-slide>
+     <div class="swiper">
+       <img class="instruction" src="../../assets/img/placeholder.png">
+         <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+     </div>
+   </ion-slide>
+   <ion-slide>
+       <div class="swiper">
+           <img class="instruction" src="../../assets/img/placeholder.png">
+             <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+         </div>
+   </ion-slide>
+   <ion-slide>
+       <div class="swiper">
+           <img class="instruction" src="../../assets/img/placeholder.png">
+             <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" shape="round" class="goBtn">LOS GEHT'S</ion-button>
+         </div>
+   </ion-slide>
+ </ion-slides>
+</div>
