--- a/komunat/src/app/matches/matches.page.scss
+++ b/komunat/src/app/matches/matches.page.scss
@@ -1,11 +1,8 @@
+
 .item-md ion-avatar img {
     width: 150px !important;
     height: auto !important;
 }
-
-.title {
-    margin-top:10px;
-} 
 
 img {
     width: 100px;
@@ -16,16 +13,16 @@ img {
 .progressBg {
     background-color: var(--komunat-gray-light);
     width:100vw;
-    height:10px;
-    min-height: 10px;
+    height:6px;
+    min-height: 6px;
 }
 
 .progress {
     background-color: var(--komunat-blue);
     width:100vw;
-    height:10px;
-    min-height: 1px;
-    -webkit-transition: width 0.5s; /* Safari */
+    height:6px;
+    min-height: 6px;
+    -webkit-transition: width 0.5s; 
     transition: width 0.5s;
 }
 
@@ -33,6 +30,8 @@ img {
     text-align:right;
     padding-right:10px;
     padding-bottom:5px;
+    margin-top: -4vh;
+    font-size: 2vh;
 }
 
 .candidateImg {
@@ -107,4 +106,18 @@ img {
 
 .tinderButtonInnerWrapper {
     width: auto;
+}
+
+
+ion-row {
+    margin-top: 10px;
+}
+
+.topIcon {
+    font-size: 5vh;
+}
+
+.title {
+    font-size: 5vh;
+    margin-top:0px;
 }
