--- a/komunat/src/app/home/home.page.scss
+++ b/komunat/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+.container {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 .logo {
