--- a/komunat/src/theme/variables.scss
+++ b/komunat/src/theme/variables.scss
@@ -1,10 +1,9 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
-
 /** Ionic CSS Variables **/
 :root {
-
+  /** Komunat Colors **/
   --komunat-blue: #59BCED;
   --komunat-gray-light: #DEE0E5;
   --komunat-gray-medium: #B2B4B9;
@@ -12,12 +11,12 @@
   --komunat-red:#FC735D;
 
   /** primary **/
-  --ion-color-primary: #59BCED;
+  --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #59BCED;
-  --ion-color-primary-tint: #59BCED;
+  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-tint: #4c8dff;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
